--- a/CondominioApp/app/src/main/res/layout/fragment_chamados.xml
+++ b/CondominioApp/app/src/main/res/layout/fragment_chamados.xml
@@ -5,12 +5,13 @@
     android:background="@android:color/holo_blue_bright"
     tools:context="br.com.opetab.condominioapp.Fragments.ChamadosFragment">
 
-    <TextView
+    <android.support.v7.widget.RecyclerView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="Chamados"
-        android:textAlignment="center"
-        android:layout_gravity="center"/>
+        android:layout_height="match_parent"
+        android:id="@+id/recyclerView"
+        android:scrollbars="vertical">
+
+    </android.support.v7.widget.RecyclerView>
 
 
 </FrameLayout>
