--- a/CondominioApp/app/src/main/res/layout/activity_main.xml
+++ b/CondominioApp/app/src/main/res/layout/activity_main.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/activity_main"
@@ -8,28 +8,31 @@
 
     tools:context="br.com.opetab.condominioapp.Activitys.MainActivity">
 
-        <LinearLayout
+                <android.support.design.widget.AppBarLayout
 
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:orientation="vertical">
-
-                <android.support.design.widget.TabLayout
-                    android:id="@+id/homeTabLayout"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:background="@color/colorPrimary"
-                    app:tabTextColor="@android:color/white"
-                    app:tabSelectedTextColor="@android:color/white"
-                    app:tabIndicatorColor="@android:color/white"
-                    />
+                    android:layout_height="wrap_content">
+
+                        <include layout="@layout/include_toolbar"/>
+
+                    <android.support.design.widget.TabLayout
+                            android:id="@+id/homeTabLayout"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:background="@color/colorPrimary"
+                            app:tabTextColor="@android:color/white"
+                            app:tabSelectedTextColor="@android:color/white"
+                            app:tabIndicatorColor="@android:color/white"
+                            />
+                </android.support.design.widget.AppBarLayout>
 
                 <android.support.v4.view.ViewPager
                     android:id="@+id/viewPager"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:background="@android:color/white"/>
+                    android:layout_height="match_parent"
+                    android:background="@android:color/white"
+                    app:layout_behavior="@string/appbar_scrolling_view_behavior"/>
 
-        </LinearLayout>
 
-</RelativeLayout>
+        </android.support.design.widget.CoordinatorLayout>
+
