--- a/CondominioApp/app/src/main/res/values/colors.xml
+++ b/CondominioApp/app/src/main/res/values/colors.xml
@@ -4,4 +4,6 @@
     <color name="colorPrimaryDark">#303F9F</color>
     <color name="colorAccent">#FF4081</color>
     <color name="white">#FFFFFF</color>
+    <color name="light_gray">#E0E0E0</color>
+    <color name="dark_gray">#9E9E9E</color>
 </resources>
