--- a/CondominioApp/app/src/main/res/layout/activity_detalhes.xml
+++ b/CondominioApp/app/src/main/res/layout/activity_detalhes.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/activity_detalhes"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -12,100 +13,112 @@
         android:layout_height="wrap_content">
 
         <include layout="@layout/include_toolbar" />
-    </android.support.design.widget.AppBarLayout>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            app:layout_scrollFlags="scroll|enterAlways"
+            android:orientation="vertical">
 
-
-    <ScrollView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:orientation="vertical">
+            android:layout_height="wrap_content"
 
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+            android:orientation="horizontal">
 
-                android:orientation="horizontal">
-
-                <ImageView
-                    android:id="@+id/img_chamado"
-                    android:layout_width="50dp"
-                    android:layout_height="50dp"
-                    android:layout_marginLeft="20dp"
-                    android:layout_marginTop="20dp" />
-
-                <LinearLayout
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginLeft="20dp"
-                    android:layout_marginRight="20dp"
-                    android:layout_marginTop="20dp"
-                    android:orientation="vertical">
-
-                    <TextView
-                        android:id="@+id/nome_chamado"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:fontFamily="sans-serif"
-                        android:text="Nome do chamado"
-                        android:textSize="20dp"
-
-                        />
-
-                    <TextView
-                        android:id="@+id/solicitante_chamado"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:text="Nome do usuário"
-                        android:textSize="14dp" />
-
-                    <TextView
-                        android:id="@+id/situacao_chamado"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:text="Situação: Ativo"
-                        android:textSize="14dp"
-                        android:textStyle="bold" />
-                </LinearLayout>
-
-
-            </LinearLayout>
+            <ImageView
+                android:id="@+id/img_chamado"
+                android:layout_width="50dp"
+                android:layout_height="50dp"
+                android:layout_marginLeft="20dp"
+                android:layout_marginTop="20dp" />
 
             <LinearLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginBottom="20dp"
                 android:layout_marginLeft="20dp"
                 android:layout_marginRight="20dp"
-                android:layout_marginTop="20dp">
-
-                <TextView
-                    android:id="@+id/descricao_chamado"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:text="Uma breve descrição sobre o chamadoUma breve descrição sobre o chamadoUma breve descrição sobre o chamado"
-                    android:textSize="17dp" />
-            </LinearLayout>
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="20dp"
-                android:background="@color/light_gray"
-                android:gravity="center"
+                android:layout_marginTop="10dp"
                 android:orientation="vertical">
 
                 <TextView
+                    android:id="@+id/nome_chamado"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginLeft="10dp"
-                    android:text="@string/comentarios"
-                    android:textColor="@color/dark_gray"
-                    android:textSize="12dp"
+                    android:fontFamily="sans-serif"
+                    android:textColor="@color/white"
+                    android:text="Nome do chamado"
+                    android:textSize="20dp"
+
+                    />
+
+                <TextView
+                    android:id="@+id/solicitante_chamado"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:textColor="@color/white"
+                    android:text="Nome do usuário"
+                    android:textSize="14dp" />
+
+                <TextView
+                    android:id="@+id/situacao_chamado"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="Situação: Ativo"
+                    android:textColor="@color/white"
+                    android:textSize="14dp"
                     android:textStyle="bold" />
             </LinearLayout>
+
+
         </LinearLayout>
-    </ScrollView>
-</LinearLayout>
+
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="20dp"
+            android:layout_marginLeft="20dp"
+            android:layout_marginRight="20dp"
+            android:layout_marginTop="20dp">
+
+            <TextView
+                android:id="@+id/descricao_chamado"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:textColor="@color/white"
+                android:text="Uma breve descrição sobre o chamadoUma breve descrição sobre o chamadoUma breve descrição sobre o chamado"
+                android:textSize="17dp" />
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="20dp"
+            android:background="@color/light_gray"
+            android:gravity="center"
+            android:orientation="vertical">
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="10dp"
+                android:text="@string/comentarios"
+                android:textColor="@color/dark_gray"
+                android:textSize="12dp"
+                android:background="@color/light_gray"
+                android:textStyle="bold" />
+        </LinearLayout>
+        </LinearLayout>
+
+
+    </android.support.design.widget.AppBarLayout>
+
+            <android.support.v7.widget.RecyclerView
+                android:id="@+id/recyclerView"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                app:layout_behavior="@string/appbar_scrolling_view_behavior"
+                android:scrollbars="vertical"
+                />
+
+
+
+</android.support.design.widget.CoordinatorLayout>
