--- a/CondominioApp/app/src/main/res/layout/activity_main.xml
+++ b/CondominioApp/app/src/main/res/layout/activity_main.xml
@@ -34,5 +34,16 @@
                     app:layout_behavior="@string/appbar_scrolling_view_behavior"/>
 
 
+    <android.support.design.widget.FloatingActionButton
+        android:id="@+id/fab"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="bottom|right"
+        android:layout_marginRight="20dp"
+        android:layout_marginBottom="20dp"
+        android:tint="@color/white"
+        android:background="@color/colorAccent"
+        android:src="@android:drawable/ic_input_add"
+        />
         </android.support.design.widget.CoordinatorLayout>
 
