--- a/CondominioApp/app/src/main/res/layout/include_toolbar.xml
+++ b/CondominioApp/app/src/main/res/layout/include_toolbar.xml
@@ -3,7 +3,8 @@
 <android.support.v7.widget.Toolbar xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/toolbar"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
+    android:background="@color/colorPrimary"
     app:theme="@style/AppTheme"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     app:layout_scrollFlags="scroll|enterAlways"
