--- a/CondominioApp/app/src/main/res/values/colors.xml
+++ b/CondominioApp/app/src/main/res/values/colors.xml
@@ -6,4 +6,5 @@
     <color name="white">#FFFFFF</color>
     <color name="light_gray">#E0E0E0</color>
     <color name="dark_gray">#9E9E9E</color>
+    <color name="black">#000000</color>
 </resources>
