--- a/CondominioApp/app/src/main/res/layout/activity_main.xml
+++ b/CondominioApp/app/src/main/res/layout/activity_main.xml
@@ -1,13 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/activity_main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-
-    tools:context="br.com.opetab.condominioapp.Activitys.MainActivity">
-
+    tools:context="br.com.opetab.condominioapp.Activitys.MainActivity"
+    >
+<android.support.design.widget.CoordinatorLayout
+    android:layout_width="match_parent"
+    android:layout_height="match_parent">
                 <android.support.design.widget.AppBarLayout
 
                     android:layout_width="match_parent"
@@ -25,6 +27,7 @@
                             app:tabIndicatorColor="@android:color/white"
                             />
                 </android.support.design.widget.AppBarLayout>
+
 
                 <android.support.v4.view.ViewPager
                     android:id="@+id/viewPager"
@@ -45,5 +48,17 @@
         android:background="@color/colorAccent"
         android:src="@android:drawable/ic_input_add"
         />
-        </android.support.design.widget.CoordinatorLayout>
+</android.support.design.widget.CoordinatorLayout>
+    <android.support.design.widget.NavigationView
+        android:id="@+id/nav_view"
+        android:layout_width="wrap_content"
+        android:layout_height="match_parent"
+        android:fitsSystemWindows="true"
+        android:layout_gravity="start"
+        app:menu="@menu/nav_drawer_menu"
+        >
+
+    </android.support.design.widget.NavigationView>
+
+</android.support.v4.widget.DrawerLayout>
 
