--- a/CondominioApp/app/src/main/res/layout/activity_login.xml
+++ b/CondominioApp/app/src/main/res/layout/activity_login.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/activity_login"
     android:layout_width="match_parent"
@@ -15,38 +15,38 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:gravity="center_vertical"
         android:orientation="vertical"
-
         >
+
+        <ImageView
+            android:layout_width="200dp"
+            android:layout_height="200dp"
+            android:src="@drawable/logo"
+            android:layout_gravity="center"
+            android:layout_weight="1"
+            />
 
         <TextView
             android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:text="Seja bem vindo"
-            android:layout_weight="1"
-            android:gravity="bottom"
+            android:layout_height="50dp"
+            android:text="@string/bemvindo"
             android:textAlignment="center"
             android:fontFamily="sans-serif-light"
             android:textSize="30dp"
-            android:paddingBottom="30dp"
+            android:layout_weight="1"
             />
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:gravity="bottom"
-            >
 
             <com.facebook.login.widget.LoginButton
                 android:id="@+id/login_button"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="match_parent"
                 android:textSize="17dp"
+                android:layout_weight="1"
                 />
+
+
         </LinearLayout>
 
-        </LinearLayout>
 
-
-</RelativeLayout>
+</LinearLayout>
