--- a/CondominioApp/app/src/main/res/layout/activity_detalhes.xml
+++ b/CondominioApp/app/src/main/res/layout/activity_detalhes.xml
@@ -101,6 +101,17 @@
                 android:layout_marginRight="20dp"
                 android:layout_marginLeft="20dp"/>
 
+            <Button
+                android:id="@+id/btnComentar"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="@string/hint_comentar"
+                android:textColor="@color/white"
+                android:background="@color/colorAccent"
+                android:layout_marginBottom="10dp"
+                android:layout_marginRight="20dp"
+                android:layout_marginLeft="20dp"/>
+
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="20dp"
@@ -122,6 +133,13 @@
 
     </android.support.design.widget.AppBarLayout>
 
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+
+
+    </LinearLayout>
+
             <android.support.v7.widget.RecyclerView
                 android:id="@+id/recyclerView"
                 android:layout_width="match_parent"
@@ -129,7 +147,6 @@
                 app:layout_behavior="@string/appbar_scrolling_view_behavior"
                 android:scrollbars="vertical"
                 />
-
 
 
 </android.support.design.widget.CoordinatorLayout>
