--- a/CondominioApp/app/src/main/res/layout/adapter_comentario.xml
+++ b/CondominioApp/app/src/main/res/layout/adapter_comentario.xml
@@ -34,15 +34,33 @@
                 android:layout_marginRight="20dp"
 
                 >
-                <TextView
-                    android:id="@+id/nome_usuario"
-                    android:layout_width="match_parent"
+                <LinearLayout
+                    android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:textColor="@color/black"
-                    android:text="Nome do usuario"
-                    android:textSize="18dp"
-                    android:fontFamily="sans-serif"
-                    />
+                    android:orientation="horizontal"
+                    >
+                    <TextView
+                        android:id="@+id/nome_usuario"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:textColor="@color/black"
+                        android:gravity="center"
+                        android:text="Nome do usuario"
+                        android:textSize="18dp"
+                        android:fontFamily="sans-serif"
+
+                        />
+
+                    <Button
+                        android:id="@+id/btnRemover"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:background="@color/white"
+
+                        android:drawableStart="@drawable/ic_delete"/>
+
+                </LinearLayout>
+
                 <LinearLayout
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
